Fix new Search hero and search hero custom on tablet version (was totally screwed)

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base-b/less/all.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base-b/less/all.less
@@ -423,6 +423,27 @@ html.aToBTmp {
     .heroBannerDestinationND .c-hero-banner-homepage__title {
       width:73%;
     }
+
+    .c-search-hero-v2 {
+      .mobile-select-ready{
+        background-color: transparent;
+        border: 1px solid #d3d5d6 !important;
+        height: 40px !important;
+        text-transform: uppercase;
+        color: #d3d5d6;
+      }
+      .fa.fa-angle-down{
+        color:#d3d5d6;
+      }
+    }
+
+    .searchheroCustom {
+      .c-search-hero-v2{
+        .col-sm-4 {
+          padding: 0 10px !important;
+        }
+      }
+    }
   }
 
 
@@ -430,6 +451,10 @@ html.aToBTmp {
     .c-ship-teaser__label .fa {
       padding-bottom: 3px;
     }
+  }
+
+  .c-brochure__thankyou .btn {
+    min-width: 230px;
   }
 
   //Other lang fixes
